--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.3.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
